# mastro_modbus

./: readme.md
docker/client/: Dockerfile  docker-compose.yml
docker/consumer/: Dockerfile  docker-compose.yml
docker/develop/: Dockerfile  Dockerfile_api  Dockerfile_app  Dockerfile_built  docker-compose.yml
docker/server/: Dockerfile  Dockerfile_watchdog  docker-compose.yml
mastro_api/: Dockerfile  alembic.ini  docker-compose.yml  pyproject.toml
mastro_api/app/: crud.py  main.py  models.py  responses.py
mastro_api/app/api/: deps.py  main.py
mastro_api/app/core/: config.py  db.py  security.py
mastro_api/app/modbus_writable/: modbus_channel.py
mastro_app/: README.md  package-lock.json  package.json
mastro_app/public/: index.html
mastro_app/src/: App.vue  main.js
mastro_consumer/: mqtt_consume.py  pyproject.toml
mastro_consumer/core/: config.py  db_consume.py  formatter.py
mastro_pull/: mastro_main.py  pyproject.toml  requirements
mastro_pull/core/: config.py  logo
mastro_pull/db/: connections.py  dump.sql  generator.py
mastro_pull/devices/: barbara_adams.000  barbara_demo2.000  barbara_labo_sbarbara.000  barbara_novus143.000  barbara_thl.000  laboratory_devs.yaml
mastro_pull/devices/meteo/: davis2.yaml
mastro_pull/devices/second/: laboratory_energy.yaml
mastro_pull/devices/thl/: thl.yml
mastro_pull/devices/tmp/: adam.yaml  consumer.yaml  green_pilot_local.yml  labo_sbarbara.000  novus.000  thl.000
mastro_pull/src/: app_framework.py  iterate_registers.py  manage_output.py  mastro_device_class.py  modbus_function_codes.py  mqtt_publish_class.py  telegram_bot.py
telegram_watchdog/: Dockerfile  docker-compose.yml  pyproject.toml  requirements  watchdog.py
telegram_watchdog/config/: config.py
(+25 files in other folders)
